:sunrise_over_mountains: Fix le bouton principal sur mobile qui ne wrapait pas le texte

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1680,6 +1680,9 @@ textarea {
         margin-right: auto;
         padding: 8px 20px;
         font-size: 13px;
+        white-space: normal;
+        line-height: 24px;
+        font-size: 120%;
     }
     #main-slider .caption-text .btn:first-child {
         margin-top: 50px;
